portfolio-web/argocd/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-web
  labels:
    name: portfolio-web
