portfolio-web/argocd/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-web
  namespace: portfolio-web
  labels:
    app: portfolio-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-web
  template:
    metadata:
      labels:
        app: portfolio-web
    spec:
      containers:
      - name: portfolio-web
        image: harbor-oci-registry-registry.registry.svc.cluster.local:5000/frontend/portfolio-web:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
