portfolio-web/argocd/manifests/harbor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-registry
  namespace: portfolio-web
spec:
  type: ExternalName
  externalName: 192.168.1.168
  ports:
  - port: 30003
    targetPort: 30003
    protocol: TCP
