portfolio-web/argocd/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-web
  namespace: portfolio-web
  labels:
    app: portfolio-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: portfolio-web
